--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,3 +86,26 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
+//自定义css
+
+
+.mytabs .tab-button[aria-selected=true] .tab-button-icon{
+
+  color: #f53d3d !important;  /*优先级高*/
+}
+
+.mytabs .tab-button:hover:not(.disable-hover), .mytabs .tab-button[aria-selected=true]{
+
+  color: #f53d3d !important;  /*优先级高*/
+
+}
+
+.clearfix:after{
+
+  content: "";
+  display: block;
+  height:0px;
+  clear: both;
+}
